[package]
name = "tessera"
version = "0.2.0"
authors = ["Kyle Chen"]
edition = "2024"
rust-version = "1.85"
description = "Image mosaic generator"
readme = "README.md"
repository = "https://github.com/astral4/tessera"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.98"
fast_image_resize = { version = "5.1.4", features = ["only_u8x4", "rayon"] }
foldhash = "0.1.5"
image = { version = "0.25.6", default-features = false, features = ["avif", "jpeg", "png", "rayon", "webp"] }
kiddo = { version = "5.0.3", default-features = false, features = ["simd"] }
pico-args = { version = "0.5.0", features = ["eq-separator"] }
quantette = "0.3.0"
walkdir = "2.5.0"

[lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "warn"
non_ascii_idents = "forbid"
non_local_definitions = "warn"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[lints.clippy]
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
excessive_precision = { level = "allow", priority = 1 }
many_single_char_names = { level = "allow", priority = 1 }
pedantic = "warn"
too_many_lines = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }

[profile.release]
lto = "thin"
strip = true
